
  * Fix segfault and show the correct changelog when executing "aptitude
    changelog <source-package-name>", and no binary packages in that source
    package match the source package name (Closes: #723821)

  * Use new URL to grab changelogs, redirections were set up so it is not
    currently a problem, but the new location seems to be the canonical place
    for metadata (Closes: #708345)

- Internal changes:

  * Change INCLUDES to AM_CPPFLAGS in automake files to avoid warning:
    "'INCLUDES' is the old name for 'AM_CPPFLAGS' (or '*_CPPFLAGS')"

- Documentation:

  * Update manual to refer to canonical git repository.

- Translation updates:


[2014-01-26] Version 0.6.8.4

- New features:

  * Get changelogs also when package origin is from "Debian Backports" and not
    only "Debian", thanks Gerfried Fuchs (Closes: #714619)
  * New sort policy 'debsize' for sorting by package size, thanks Marcel Partap
  * Add "Reinstall (shortcut L)" to the package menu (Closes: #633788)
  * Add descriptions for sections introduced in 2011 (education, introspection,
    metapackages) (Closes: #674681)

- Bug fixes:

  * Do not group packages as tasks based on their name, rather, use their
    section (Closes: #679602)
  * Change AC_ARG_ENABLE(package-state-loc, ...) for
    AC_ARG_WITH(package-state-loc, ...), and the same for "lock-loc", to fix
    inconsistency/bug in the configure file.  Thanks Jeremy Laine (Closes:
    #399757)
  * Correct slightly the error message when the invocation of dpkg fails to
    perform an operation (Closes: #348758)

- Documentation:

  * Improve description and fix typo for the "show" command in man page, thanks
    Regid Ichira (Closes: #692173)

- Translation updates:

  * Fix inconsistent German translations (Closes: #720186)
  * Fix important error in translation in Spanish manpage, thanks Martintxo
    (Closes: #727815)
  * Fix error in Spanish translation, thanks Manolo Díaz (Closes: #716669)

[2014-01-19] Version 0.6.8.3
