@@ -15,6 +15,8 @@
     currently a problem, but the new location seems to be the canonical place
     for metadata (Closes: #708345)
 
+  * Fix incorrect results with some sorting policies (Closes: #720750)
+
 - Internal changes:
 
   * Change INCLUDES to AM_CPPFLAGS in automake files to avoid warning:
